# almostauto

./: .gitignore  README.md  piccolo_conf.py  pyproject.toml
almostauto-db/: README.md  piccolo_conf.py  pyproject.toml
almostauto-db/src/almostauto/db/: piccolo_app.py  tables.py
almostauto-db/src/almostauto/db/piccolo_migrations/: almostauto_db_2024_07_16t21_46_34_275517.py  almostauto_db_2024_07_19t22_15_35_887458.py  almostauto_db_2024_07_24t22_18_48_980792.py  almostauto_db_2024_07_25t08_56_10_619856.py  almostauto_db_2024_07_26t14_43_44_297879.py  almostauto_db_2024_07_26t22_08_27_210049.py  almostauto_db_2024_07_28t14_52_28_007403.py  almostauto_db_2024_07_28t18_56_55_957852.py  almostauto_db_2024_08_01t20_28_34_882901.py
almostauto-web/: package.json  piccolo_conf.py  pyproject.toml  tailwind.config.js
almostauto-web/src/almostauto/web/: app.py  models.py  runbook_steps.py  runbooks.py  template_steps.py  templates.py
almostauto-web/src/almostauto/web/components/: 404.jinja  500.jinja  Base.jinja  EditTemplatePage.jinja  HomePage.jinja  NewTemplatePage.jinja  RunbookIdPage.jinja  RunbooksListPage.jinja  TemplatesListPage.jinja  ViewTemplatePage.jinja
almostauto-web/src/almostauto/web/components/runbook_steps/: EditForm.jinja  ResultControl.jinja  Step.jinja
almostauto-web/src/almostauto/web/components/runbooks/: ControlPanel.jinja  ListRunbooks.jinja  RunbookId.jinja
almostauto-web/src/almostauto/web/components/template_steps/: CreateStepButton.jinja  CreateTemplateStep.jinja  EditForm.jinja  NewTemplateStepForm.jinja  TemplateStep.jinja  TemplateStepsList.jinja
almostauto-web/src/almostauto/web/components/templates/: EditTemplateContent.jinja  EditTemplateForm.jinja  TemplateStepsList.jinja  TemplatesContent.jinja  TemplatesList.jinja  TemplatesListControls.jinja  ViewTemplate.jinja  ViewTemplateAndSteps.jinja  ViewTemplateContent.jinja  ViewTemplateControls.jinja
almostauto-web/src/almostauto/web/static/: style.css
almostauto-web/src/almostauto/web/templates/: base.html.jinja2  template-page.html.jinja2  templates-new.html.jinja2  templates-view.html.jinja2
almostauto-web/src/almostauto/web/templates/fragments/: template_steps_new.html.jinja2  templates-edit.html.jinja2  templates-list.html.jinja2  templates-new.html.jinja2  templates-view.html.jinja2
almostauto-web/src/almostauto/web/templates/pages/: 404.html.jinja2  500.jinja  home.html.jinja  home.html.jinja2  templates-edit.html.jinja2  templates-id.html.jinja2  templates-new.html.jinja2  templates.html.jinja2
