[project]
name = "almostauto"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michael Caley", email = "mjcaley@darkarctic.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.workspace]
members = ["almostauto-*"]
