[project]
name = "almostauto-db"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michael Caley", email = "mjcaley@darkarctic.com" }
]
dependencies = [
    "piccolo[postgres]>=1.13.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/almostauto"]
