[project]
name = "almostauto-web"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michael Caley", email = "mjcaley@darkarctic.com" }
]
dependencies = [
    "almostauto-db>=0.1.0",
    "litestar[standard]>=2.9.1",
    "jinjax>=0.43",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/almostauto"]
include = [
    "src/almostauto/web/components/**/*.jinja",
    "src/almostauto/web/static/**/*.css",
]

[tool.rye.scripts]
devserver = "litestar --app almostauto.web.app:app run --reload --debug"
tailwind = "tailwindcss -i src/almostauto/web/input.css -o src/almostauto/web/static/style.css"
tailwind-watch = "tailwindcss -i src/almostauto/web/input.css -o src/almostauto/web/static/style.css --watch"
